--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 /*
 ! tailwindcss v3.2.1 | MIT License | https://tailwindcss.com
 */
@@ -416,7 +418,7 @@ video {
   display: none;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -463,7 +465,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::-webkit-backdrop {
+::-webkit-backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -510,7 +512,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -557,192 +559,235 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute {
+.container{
+  width: 100%;
+}
+
+@media (min-width: 280px){
+  .container{
+    max-width: 280px;
+  }
+}
+
+@media (min-width: 375px){
+  .container{
+    max-width: 375px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 910px){
+  .container{
+    max-width: 910px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1400px){
+  .container{
+    max-width: 1400px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
+.absolute{
   position: absolute;
 }
 
-.relative {
+.relative{
   position: relative;
 }
 
-.bottom-4 {
+.bottom-4{
   bottom: 1rem;
 }
 
-.right-4 {
+.right-4{
   right: 1rem;
 }
 
-.my-\[50px\] {
+.mx-\[10px\]{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.mt-\[50px\]{
   margin-top: 50px;
-  margin-bottom: 50px;
 }
 
-.mt-\[20px\] {
-  margin-top: 20px;
-}
-
-.mt-\[15px\] {
+.mt-\[15px\]{
   margin-top: 15px;
 }
 
-.mb-\[50px\] {
+.mb-\[50px\]{
   margin-bottom: 50px;
 }
 
-.flex {
+.flex{
   display: flex;
 }
 
-.h-\[13rem\] {
+.h-\[13rem\]{
   height: 13rem;
 }
 
-.w-\[19rem\] {
-  width: 19rem;
+.max-w-\[350px\]{
+  max-width: 350px;
 }
 
-.flex-col {
+.flex-col{
   flex-direction: column;
 }
 
-.items-center {
+.items-center{
   align-items: center;
 }
 
-.justify-center {
+.justify-center{
   justify-content: center;
 }
 
-.rounded-lg {
+.rounded-lg{
   border-radius: 0.5rem;
 }
 
-.border-t-4 {
+.border-t-4{
   border-top-width: 4px;
 }
 
-.border-green-400 {
+.border-green-400{
   --tw-border-opacity: 1;
   border-color: rgb(74 222 128 / var(--tw-border-opacity));
 }
 
-.border-red-400 {
+.border-red-400{
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
 
-.border-yellow-400 {
+.border-yellow-400{
   --tw-border-opacity: 1;
   border-color: rgb(250 204 21 / var(--tw-border-opacity));
 }
 
-.border-blue-400 {
+.border-blue-400{
   --tw-border-opacity: 1;
   border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }
 
-.bg-slate-100 {
+.bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-\[20px\] {
+.p-\[20px\]{
   padding: 20px;
 }
 
-.px-\[30px\] {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.text-center {
+.text-center{
   text-align: center;
 }
 
-.text-\[15px\] {
+.font-body{
+  font-family: Poppins;
+}
+
+.text-\[15px\]{
   font-size: 15px;
 }
 
-.text-\[25px\] {
+.text-\[25px\]{
   font-size: 25px;
 }
 
-.font-light {
+.font-light{
   font-weight: 300;
 }
 
-.font-bold {
+.font-bold{
   font-weight: 700;
 }
 
-.text-gray-600 {
+.text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.shadow-xl {
+.shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-@media (min-width: 1024px) {
-  .lg\:my-\[20px\] {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-  .lg\:ml-\[70px\] {
-    margin-left: 70px;
-  }
-
-  .lg\:mt-\[150px\] {
-    margin-top: 150px;
-  }
-
-  .lg\:mb-\[40px\] {
-    margin-bottom: 40px;
-  }
-
-  .lg\:flex {
+@media (min-width: 768px){
+  .md\:flex{
     display: flex;
   }
 
-  .lg\:w-\[30rem\] {
-    width: 30rem;
-  }
-
-  .lg\:w-\[23rem\] {
-    width: 23rem;
-  }
-
-  .lg\:flex-col {
+  .md\:flex-col{
     flex-direction: column;
   }
 
-  .lg\:items-center {
+  .md\:items-center{
     align-items: center;
   }
 
-  .lg\:justify-between {
-    justify-content: space-between;
+  .md\:justify-center{
+    justify-content: center;
   }
 
-  .lg\:gap-\[30px\] {
-    gap: 30px;
+  .md\:px-\[250px\]{
+    padding-left: 250px;
+    padding-right: 250px;
+  }
+}
+
+@media (min-width: 1024px){
+  .xl\:mt-\[100px\]{
+    margin-top: 100px;
   }
 
-  .lg\:gap-\[20px\] {
+  .xl\:flex{
+    display: flex;
+  }
+
+  .xl\:flex-row{
+    flex-direction: row;
+  }
+
+  .xl\:flex-col{
+    flex-direction: column;
+  }
+
+  .xl\:items-center{
+    align-items: center;
+  }
+
+  .xl\:justify-center{
+    justify-content: center;
+  }
+
+  .xl\:gap-\[20px\]{
     gap: 20px;
-  }
-
-  .lg\:pb-\[30px\] {
-    padding-bottom: 30px;
   }
 }
